fix: Display commit and branch when scrollbar is always displayed (#1056)

--- a/app/components/pipeline-header/styles.scss
+++ b/app/components/pipeline-header/styles.scss
@@ -80,6 +80,9 @@
       .branch-dropdown {
         padding-left: 10px;
         padding-right: 10px;
+        overflow: scroll;
+        max-width: 40rem;
+        max-height: calc(100vh - 120px);
 
         .branch-item {
           padding: 1px 0;
